--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,56 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.heroList{
+    display: flex;
+    flex-wrap: wrap;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.heroCard{
+    border-radius: 9px;
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.13);
+    border: 1px solid rgba(0, 0, 0, 0.062);
+    height: 160px;
+    overflow: hidden;
+    margin: 8px;
+    display: flex;
+    width: 350px;
+}
+
+.heroCard img{
+    height: max-height;
+}
+
+.card-info{
+    padding: 2px 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card-info h1{
+    font-size: 20px;
+    margin: 0;
+}
+
+.card-info p{
+    margin: 0;
+    color: rgb(70, 70, 70);
+}
+
+.hero-screen{
+    display: flex;
+}
+
+.hero-screen img{
+    height: 450px;
+}
+
+.hero-screen__info{
+    padding: 2px 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.form{
+    display: flex;
+    width: 400px;
 }
